[tool.poetry]
name = "serve-me-once"
version = "0.1.1"
description = ""
authors = ["Peder Bergebakken Sundt <pbsds@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
python-language-server = {extras = ["all"], version = "^0.36.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
